--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,6 +24,8 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+vars:
+  budget_date: '2024-10-01'
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -38,8 +40,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   my_new_project:
     # Applies to all files under models/example/
-    staging:
-      +materialized: view
-    marts:
-      +materialized: table
+    # staging:
+      # +materialized: view
+    # marts:
+      # +materialized: table
 
