--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,7 +38,34 @@ vars:
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  +transient: false
+  curso:
+    # Applies to all files under models/example/
+
+    staging:
+      +materialized: view
+      +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
+      google_sheets:
+        +schema: google_sheets
+      sql_server_dbo:
+        +schema: sql_server_dbo
+      
+    marts:
+      +materialized: table
+      +database: "{{ env_var('DBT_ENVIRONMENTS') }}_GOLD_DB"
+      core:
+        +schema: core
+seeds:
+  +schema: seed_data
+  +database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB"        
+snapshots:
+  +transient: false
+  +target_database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
+  +target_schema: snapshots
+
+
+# models:
+  # my_new_project:
     # Applies to all files under models/example/
     # staging:
       # +materialized: view
