--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,10 +38,11 @@ vars:
 # using the `{{ config(...) }}` macro.
 
 models:
+  my_new_project:
   +transient: false
   curso:
     # Applies to all files under models/example/
-
+    example:
     staging:
       +materialized: view
       +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
