--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -64,7 +64,9 @@ snapshots:
   +target_database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
   +target_schema: snapshots
 
-
+on-run-start:
+  - "ALTER WAREHOUSE WH_CURSO_DATA_ENGINEERING RESUME;"
+  
 # models:
   # my_new_project:
     # Applies to all files under models/example/
