--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,8 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+# name: 'my_new_project'
+name: 'civica_project_dbt'
 version: '1.0.0'
 config-version: 2
 
@@ -36,24 +37,39 @@ vars:
 # instead be materialized as tables. Any models you add to the root of the models folder will 
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
+#models:
+# my_new_project:
+#  +transient: false
+#  curso:
+    # Applies to all files under models/example/
+#    example:
+#    staging:
+#      +materialized: view
+#      +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
+#     google_sheets:
+#        +schema: fish_data
+      
+#    marts:
+#      +materialized: table
+#     +database: "{{ env_var('DBT_ENVIRONMENTS') }}_GOLD_DB"
+#      core:
+#        +schema: core
+
 
 models:
   my_new_project:
   +transient: false
-  curso:
-    # Applies to all files under models/example/
-    example:
-    staging:
-      +materialized: view
-      +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
-      google_sheets:
-        +schema: fish_data
-      
-    marts:
-      +materialized: table
-      +database: "{{ env_var('DBT_ENVIRONMENTS') }}_GOLD_DB"
-      core:
-        +schema: core
+  staging:
+    +materialized: view
+    +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
+    google_sheets:
+      +schema: fish_data
+    
+  marts:
+    +materialized: table
+    +database: "{{ env_var('DBT_ENVIRONMENTS') }}_GOLD_DB"
+    core:
+      +schema: core
 seeds:
   +schema: seed_data
   +database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB"        
