--- a/models/staging/fish_data/fish_data__model.yml
+++ b/models/staging/fish_data/fish_data__model.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: fechas_dias 
+  - name: stg_fish_data__fechas_dias 
     description: File to configure the models config
     docs:
       show: false
@@ -53,7 +53,7 @@ models:
         description: Dia del trimestre en.
         constraints:
           - type: not_null
-  - name: fechas_anios 
+  - name: stg_fish_data__fechas_anios 
     description: File to configure the models config
     docs:
       show: false
@@ -72,7 +72,7 @@ models:
         description: Año de la fecha en números.
         constraints:
           - type: not_null
-  - name: fish
+  - name: stg_fish_data__fish
     description: File to configure the models config
     docs:
       show: false
@@ -94,141 +94,112 @@ models:
           - type: not_null
       - name: anio_descripcion 
         description: Año como date, con mes 1 y dia 1.
-        constraints:
-          - type: not_null
+
       - name: status_iucn
         description:  Status de riesgo de conservacion de la especie.
-        constraints:
-          - type: not_null
+ 
       - name: genero_id 
         description: Es el nombre del genero hasheado que hará de clave foranea apuntando a la tabla generos.
         constraints:
           - type: not_null
         tests:
           - relationships:
-              to: ref('stg_fish_data_genero')
+              to: ref('stg_fish_data__genero')
               field: genero_id
               config:
                 severity: error
       - name: tipo_agua
         description: Agua en la que vive (salada/dulce)..
-        constraints:
-          - type: not_null
+     
       - name: tamamio_medio_cm
         description: Tamaño medio de esta especie.
-        constraints:
-          - type: not_null
+    
       - name: tamanio_maximo_cm
         description: Tamaño máximo de esta especie.
-        constraints:
-          - type: not_null
+ 
       - name: longevidad_anios
         description: Años que suele vivir.
-        constraints:
-          - type: not_null
+   
       - name: forma
         description: Forma de la especie.
-        constraints:
-          - type: not_null
+   
       - name: dieta
         description: tipo de alimentación.
-        constraints:
-          - type: not_null
+     
       - name: sociabilidad
         description: Modo de vida respecto a sus congeneres.
-        constraints:
-          - type: not_null
+    
       - name: territorial_bool
         description: Si el pez es territorial o no.
-        constraints:
-          - type: not_null
+ 
       - name: modo_de_vida
         description: Si es nocturno o diurno.
-        constraints:
-          - type: not_null
+   
       - name: pais_id
         description: País del que proviene originariamente.
         constraints:
           - type: not_null
         tests:
           - relationships:
-              to: ref('stg_fish_data_paises')
+              to: ref('stg_fish_data__paises')
               field: pais_id
               config:
                 severity: error
       - name: rio
         description: Rio del que proviene originariamente.
-        constraints:
-          - type: not_null
+
       - name: temperatura_minima_origen
         description: Temperatura mínima del agua en su lugar de origen.
-        constraints:
-          - type: not_null
+
       - name: temperatura_maxima_origen
         description: Temperatura máxima del agua en su lugar de origen.
-        constraints:
-          - type: not_null
+ 
       - name: ph_minimo_origen
         description: Ph mínimo del agua en su lugar de origen.
-        constraints:
-          - type: not_null
+
       - name: ph_maximo_origen
         description: Ph máximo del agua en su lugar de origen.
-        constraints:
-          - type: not_null
+
       - name: gh_minimo_origen
         description: Gh mínimo del agua en su lugar de origen.
-        constraints:
-          - type: not_null
+
       - name: gh_maximo_origen
         description: Gh máximo del agua en su lugar de origen.
-        constraints:
-          - type: not_null
+
       - name: corriente
         description: Identificador único es la fecha 'dd/mm/yy'.
-        constraints:
-          - type: not_null
+
       - name: volumen_minimo_litros
         description: Volumen mínimo quee necesita el pez para vivir en cautividad.
-        constraints:
-          - type: not_null
+   
       - name: poblacion_minima
         description: Población mínimo quee necesita el pez para vivir en cautividad.
-        constraints:
-          - type: not_null
+ 
       - name: temperatura_acuario_minimo
         description: Temperatura mínimo del agua en cautividad.
-        constraints:
-          - type: not_null
+ 
       - name: temperatura_acuario_maximo
         description: Temperatura máximo del agua en cautividad.
-        constraints:
-          - type: not_null
+    
       - name: ph_acuario_minimo
         description: Ph mínimo del agua en cautividad.
-        constraints:
-          - type: not_null
+      
       - name: ph_acuario_maximo
         description: Ph maximo del agua en cautividad.
-        constraints:
-          - type: not_null
+     
       - name: dificultad
         description: Dificultad de mantenimiento.
-        constraints:
-          - type: not_null
+       
       - name: robustez
         description: Resistencia del pez.
-        constraints:
-          - type: not_null
+     
       - name: comportamiento
         description: Si es pacifico o agressivo.
-        constraints:
-          - type: not_null
+     
       - name: disponibilidad
         description: La facilidad para encontrarlo en el mercado.
-        constraints:
-          - type: not_null
-  - name: items_venta
+        
+  - name: stg_fish_data__items_venta
     description: Tabla con las cantidades de specie vendida en una venta.
     docs:
       show: false
@@ -245,7 +216,7 @@ models:
           - type: not_null
         tests:
           - relationships:
-              to: ref('stg_fish_data_ventas')
+              to: ref('stg_fish_data__ventas')
               field: venta_id
               config:
                 severity: error
@@ -255,15 +226,15 @@ models:
           - type: not_null
         tests:
           - relationships:
-              to: ref('stg_fish_data_fish')
-              field: venta_id
+              to: ref('stg_fish_data__fish')
+              field: fish_id
               config:
                 severity: error
       - name: cantidad 
         description: Cantidad de una especie vendida en una venta concreta.
         constraints:
           - type: not_null
-  - name: ventas
+  - name: stg_fish_data__ventas
     description: Tabla con el id de venta y la fecha.
     docs:
       show: false
@@ -274,7 +245,7 @@ models:
         constraints:
           - type: not_null
           - type: unique
-      - name: fecha
+      - name: fecha_
         description: Fecha de la venta.
         constraints:
           - type: not_null
@@ -282,14 +253,15 @@ models:
         description: Fecha de carga.
         constraints:
           - type: not_null
-  - name: precios
+  - name: stg_fish_data__precios
+
     description: Tabla con el precio del pez y el fish_id como relación.
     docs:
       show: false
       node_color: "#cd7f32" 
     columns:
       - name: precio_id
-        description: Identificador único formado por la fecha y el fish_id hasheado.
+        description: Identificador único.
         constraints:
           - type: not_null
           - type: unique
@@ -309,6 +281,36 @@ models:
           - type: not_null
       - name: fechas 
         description: Fecha de en la  que el precio es validado.
+        constraints:
+          - type: not_null
+  - name: stg_fish_data__paises
+  
+    description: Tabla con el precio del pez y el fish_id como relación.
+    docs:
+      show: false
+      node_color: "#cd7f32" 
+    columns:
+      - name: pais_id
+        description: Identificador único formado por la nombre  hasheado.
+        constraints:
+          - type: not_null
+          - type: unique
+      - name: fish_id
+        description: Clave foranea que apunta a la tabla fish.
+        constraints:
+          - type: not_null
+        tests:
+          - relationships:
+              to: ref('stg_fish_data__fish')
+              field: fish_id
+              config:
+                severity: error
+      - name: precio
+        description: Precio del pez.
+        constraints:
+          - type: not_null
+      - name: fechas 
+        description: Fecha de en la  que el precio se creó.
         constraints:
           - type: not_null
         
