--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,14 +1,13 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
 # name: 'my_new_project'
-name: 'civica_project_dbt'
-version: '1.0.0'
+name: "civica_project_dbt"
+version: "1.0.0"
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'default'
+profile: "default"
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -20,51 +19,50 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
-clean-targets:         # directories to be removed by `dbt clean`
+target-path: "target" # directory which will store compiled SQL files
+clean-targets: # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
 vars:
-  budget_date: '2024-10-01'
+  budget_date: "2024-10-01"
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
-# In dbt, the default materialization for a model is a view. This means, when you run 
-# dbt run or dbt build, all of your models will be built as a view in your data platform. 
-# The configuration below will override this setting for models in the example folder to 
-# instead be materialized as tables. Any models you add to the root of the models folder will 
+# In dbt, the default materialization for a model is a view. This means, when you run
+# dbt run or dbt build, all of your models will be built as a view in your data platform.
+# The configuration below will override this setting for models in the example folder to
+# instead be materialized as tables. Any models you add to the root of the models folder will
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 #models:
 # my_new_project:
 #  +transient: false
 #  curso:
-    # Applies to all files under models/example/
+# Applies to all files under models/example/
 #    example:
 #    staging:
 #      +materialized: view
 #      +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
 #     google_sheets:
 #        +schema: fish_data
-      
+
 #    marts:
 #      +materialized: table
 #     +database: "{{ env_var('DBT_ENVIRONMENTS') }}_GOLD_DB"
 #      core:
 #        +schema: core
 
-
 models:
-  my_new_project:
+  civica_project_dbt:
   +transient: false
   staging:
     +materialized: view
     +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
-    google_sheets:
+    fish_data:
       +schema: fish_data
-    
+
   marts:
     +materialized: table
     +database: "{{ env_var('DBT_ENVIRONMENTS') }}_GOLD_DB"
@@ -72,20 +70,19 @@ models:
       +schema: core
 seeds:
   +schema: seed_data
-  +database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB"        
+  +database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB"
 snapshots:
   +transient: false
   +target_database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
   +target_schema: snapshots
-
 #on-run-start:
 #  - "ALTER WAREHOUSE WH_CURSO_DATA_ENGINEERING RESUME;"
-  
+
 # models:
-  # my_new_project:
-    # Applies to all files under models/example/
-    # staging:
-      # +materialized: view
-    # marts:
-      # +materialized: table
+# my_new_project:
+# Applies to all files under models/example/
+# staging:
+# +materialized: view
+# marts:
+# +materialized: table
 
