Added the use case tables

--- a/models/marts/core/_core_model.yml
+++ b/models/marts/core/_core_model.yml
@@ -177,5 +177,10 @@ models:
           - type: foreign_key
             to: ref('dim_date')
             to_columns: [date_id]
+      - name: precio_unidad
+        description: Precio de cada pez de esa especie.
+        constraints:
+          - type: not_null
+
                    
 
